WIP: more permissions stuff
Change-Id: Ifb41630dc7b1688f160f57281917d2bf0091d9c6

--- a/src/app/boards/template/board_contents/kanban_lane_contents.html
+++ b/src/app/boards/template/board_contents/kanban_lane_contents.html
@@ -35,7 +35,7 @@
                 </div>
                 <div class="col-xs-10">
                     <button type="button" class="close" title="Remove"
-                            ng-click="removeCard(lane.worklist, item)">
+                            ng-click="removeCard(lane.worklist, item); $event.stopPropagation();">
                         &times;
                     </button>
                     <a>
@@ -51,7 +51,7 @@
                 </div>
                 <div class="col-xs-10">
                     <button type="button" class="close" title="Remove"
-                            ng-click="removeCard(lane.worklist, item)">
+                            ng-click="removeCard(lane.worklist, item); $event.stopPropagation()">
                         &times;
                     </button>
                     <a>
